--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -2,12 +2,14 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "jest/globals": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
-    }
+    },
+    "plugins": ["jest"]
 }
